--- a/viewer/Trunk.toml
+++ b/viewer/Trunk.toml
@@ -1,3 +1,7 @@
 [build]
 target = "index.html"
 dist = "dist"
+
+[serve]
+tls_key_path = "certificates/key.pem"
+tls_cert_path = "certificates/cert.pem"
