--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -16,6 +16,8 @@ yew = { version = "0.20.0", features = ["csr"] }
 yew-plotly = "0.2.0"
 web-sys = "0.3.63"
 ordered-float = "3.7.0"
+serde = "1.0.164"
+gloo = "0.8.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.86"
