--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -16,16 +16,16 @@ yew-plotly = "0.2.0"
 ordered-float = "3.7.0"
 serde = "1.0.164"
 gloo = "0.8.0"
+tonic = { default-features = false, features = [], version = "0.9.2" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.86"
-tonic = { default-features = false, features = [], version = "0.9.2" }
 tonic-web-wasm-client = "0.4.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tonic = { default-features = false, features = ["transport"], version = "0.9.2" }
-tokio = { version = "1.21.1", features = ["rt", "time"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tokio = { version = "1.28.2", features = ["full"] }
 float-cmp = "0.9.0"
+tonic = { default-features = false, features = ["transport"], version = "0.9.2" }
